force-app/main/default/objects/Data__c/Data__c.object-meta.xml
<CustomObject>
    <label>Data Privacy</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Privacyes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>