force-app/main/default/objects/Data__c/fields/App_URL__c.field-meta.xml
<CustomField>
    <fullName>App_URL__c</fullName>
    <label>App URL</label>
    <type>Url</type>
</CustomField>