force-app/main/default/objects/Data__c/fields/Credtional_Option__c.field-meta.xml
<CustomField>
    <fullName>Credtional_Option__c</fullName>
    <label>Credtional Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>KSA</fullName>
            </value>
            <value>
                <fullName>UAE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>