force-app/main/default/objects/Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User_Name__c</columns>
    <columns>Password__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>